# quoin

./: .gitignore  Cargo.toml  README.md  README.ru.md  ROADMAP.md  TODO.md  build.rs
benches/: kernels.rs
capi/: .gitignore  Cargo.toml
capi/include/: fp_compressor.h  quoin.h
capi/src/: lib.rs  typed.rs
capi/test/: roundtrip.c  run.sh
docs/: ARCHITECTURE.md  BENCHMARKS.md  LANDSCAPE.md  PERFORMANCE.md  TYPES.md  plot_bench.py
examples/: bench_readme.rs  bench_typed.rs  cascade_lab.rs  compare.rs  diag_modes.rs  pareto.rs  profile_encode.rs  real_parquet.rs  small_block.rs  vs_columnar.rs  vs_vortex.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: decompress.rs  roundtrip.rs
src/: arrow.rs  bitio.rs  bitpack.rs  decimal.rs  decoder.rs  diag.rs  dtype.rs  encoder.rs  error.rs  format.rs  hash.rs  lib.rs  mode.rs  transform.rs  validity.rs  varint.rs
src/codecs/: alp.rs  alp_rd.rs  const_block.rs  delta_bitpack.rs  dict.rs  float_mult.rs  for_bitpack.rs  linear.rs  lz.rs  mod.rs  pcodec.rs  pred.rs  pred_rc.rs  raw.rs  rle.rs  stride.rs  transpose.rs  xorz.rs
src/entropy/: mod.rs  rans.rs  rc.rs  tans.rs
tests/: ratio_regression.rs  robustness.rs  roundtrip.rs  typed.rs
