[package]
name = "fp-compressor"
version = "0.1.0"
edition = "2024"
description = "Lossless compressor for streams of IEEE-754 f64 — Rust port of the `fc` floating-point compressor"
license = "Apache-2.0"
repository = "https://github.com/okhsunrog/fp-compressor-rs"
readme = "README.md"
keywords = ["compression", "floating-point", "simd", "lossless", "time-series"]
categories = ["compression"]

[dependencies]
# Runtime CPU-feature dispatch / function multiversioning for the hot kernels.
# Avoids the per-call overhead of `is_x86_feature_detected!` and generates
# baseline / AVX2 / AVX-512 clones from a single attribute.
multiversion = "0.8.0"
zstd = { version = "0.13.3", optional = true }

[dev-dependencies]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[features]
# Compare against zstd (vendored) in the bench harness.
bench-zstd = ["dep:zstd"]
# Compare against the upstream C `fc` library, compiled and linked via FFI.
# Point FC_SRC_DIR at the `fc` checkout (defaults to ../fc).
bench-fc = []

[build-dependencies]
# Only used when the `bench-fc` feature is active; cheap enough to always pull.
cc = "1.2.64"
