# Empty `[workspace]` detaches this crate from the parent quoin workspace (added
# for vendor/quoin-pco); cargo-fuzz builds it standalone.
[workspace]

[package]
name = "quoin-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.quoin]
path = ".."

# `decompress` must never crash on untrusted input — only Ok/Err.
[[bin]]
name = "decompress"
path = "fuzz_targets/decompress.rs"
test = false
doc = false
bench = false

# compress -> decompress must be a lossless round trip for any input.
[[bin]]
name = "roundtrip"
path = "fuzz_targets/roundtrip.rs"
test = false
doc = false
bench = false
